--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     "types": ["node", "jest"],
     "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
-      "@common": ["./packages/react/src/common/index.ts"],
+      "@common": ["./packages/react/src/common"],
       "@common/*": ["./packages/react/src/common/*"],
       "@nimbus-ds/storybook": ["./storybook"],
       "@nimbus-ds/icons": ["./packages/icons/tmp"],
