feat: Input AI Generative appearance and aiGenerated style (#333)
* feat: ai-generative appearance for input

* feat: aiGenerated focus state

* feat: optimized git operations by avoiding the test run in each commit&push | extended ignore list

* fix: changelogs

* fix: eslint ignore

* fix: changelogs

* fix: coderabbit suggestions

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,12 @@
 dist
 tmp
-webpack.config.ts
-alias.ts
+**/tmp
 index.d.ts
 packages/core/typings
 packages/icons/templates
+**/alias.ts
+webpack.config.ts
+packages/**/dist
+.turbo
+.build-storybook
+node_modules
