--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
       "packages/*",
       "packages/*/*",
       "packages/*/*/atomic/*",
-      "packages/*/*/composite/*"
+      "packages/*/*/composite/*",
+      "!packages/**/dist"
     ]
   },
   "scripts": {
