--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,8 @@
     "types": ["node", "jest"],
     "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
+      "@common": ["./packages/react/src/common"],
+      "@common/*": ["./packages/react/src/common/*"],
       "@nimbus-ds/storybook": ["./storybook"],
       "@nimbus-ds/icons": ["./packages/icons/tmp"],
       "@nimbus-ds/tokens": ["./packages/core/tokens/dist"],
