feat: improved cache usage, dev setup,

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "publish:npm:stable": "yarn workspaces foreach -pv -pt --exclude nimbus-design-system --exclude nimbus-helper npm publish --tolerate-republish --access public",
     "publish:rc": "babel-node -x .ts ./.scripts/publish-rc",
     "reset": "yarn clean && rm -rf node_modules .yarn/cache .turbo && git clean -fdX",
+    "setup:foundations": "node .scripts/setup-foundations.js",
+    "setup:dev": "node .scripts/dev-setup.js",
     "storybook": "storybook dev -p 6006",
-    "start:dev": "yarn storybook",
+    "start:dev": "node .scripts/dev-setup.js",
     "test": "jest --passWithNoTests --no-cache --runInBand --watchAll=false",
     "test:ci": "yarn types:check && jest --ci --coverage",
     "test:coverage": "yarn test --coverage",
