--- a/packages/react/src/atomic/Divider/package.json
+++ b/packages/react/src/atomic/Divider/package.json
@@ -28,7 +28,7 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@nimbus-ds/webpack": "workspace:^",
-    "@nimbus-ds/box": "workspace:^"
+    "@nimbus-ds/box": "workspace:^",
+    "@nimbus-ds/webpack": "workspace:^"
   }
 }
