--- a/tsconfig.json
+++ b/tsconfig.json
@@ -79,6 +79,7 @@
       "@nimbus-ds/progress-bar": [
         "./packages/react/src/atomic/ProgressBar/src"
       ],
+      "@nimbus-ds/divider": ["./packages/react/src/atomic/Divider/src"],
       "@nimbus-ds/accordion": ["./packages/react/src/composite/Accordion/src"],
       "@nimbus-ds/alert": ["./packages/react/src/composite/Alert/src"],
       "@nimbus-ds/card": ["./packages/react/src/composite/Card/src"],
