--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,5 @@ TODO.md
 # Build files
 **/build-temp--**
 
-# Synk
+# Snyk Security Extension - AI Rules (auto-generated)
 .cursor/rules/snyk_rules.mdc
