refactor: standardize component exports and improve naming conventions
- Added export for the new Slider component.
- Updated component exports to named exports for consistency.
- Renamed internal component variables for clarity and improved readability.

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -118,6 +118,10 @@
       "import": "./dist/Skeleton/index.js",
       "require": "./dist/Skeleton/index.js"
     },
+    "./Slider": {
+      "import": "./dist/Slider/index.js",
+      "require": "./dist/Slider/index.js"
+    },
     "./Spinner": {
       "import": "./dist/Spinner/index.js",
       "require": "./dist/Spinner/index.js"
