--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^5.0.0",
     "child_process": "^1.0.2",
+    "dotenv": "^17.2.3",
     "dts-bundle-generator": "^7.1.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
