--- a/packages/react/src/atomic/Chip/package.json
+++ b/packages/react/src/atomic/Chip/package.json
@@ -20,8 +20,8 @@
     "@nimbus-ds/text": "workspace:^"
   },
   "peerDependencies": {
-    "react": "^16.8 || ^17.0 || ^18.0",
-    "react-dom": "^16.8 || ^17.0 || ^18.0"
+    "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
+    "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0"
   },
   "homepage": "https://nimbus.nuvemshop.com.br/documentation",
   "repository": {
