--- a/packages/react/src/atomic/Divider/package.json
+++ b/packages/react/src/atomic/Divider/package.json
@@ -16,8 +16,8 @@
   },
   "peerDependencies": {
     "@nimbus-ds/styles": "workspace:^",
-    "react": "^16.8 || ^17.0 || ^18.0",
-    "react-dom": "^16.8 || ^17.0 || ^18.0"
+    "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
+    "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0"
   },
   "homepage": "https://nimbus.nuvemshop.com.br/documentation",
   "repository": {
