--- a/packages/react/src/atomic/Icon/package.json
+++ b/packages/react/src/atomic/Icon/package.json
@@ -19,8 +19,8 @@
   "peerDependencies": {
     "@nimbus-ds/styles": "workspace:^",
     "@nimbus-ds/typings": "workspace:^",
-    "react": "^16.8 || ^17.0 || ^18.0",
-    "react-dom": "^16.8 || ^17.0 || ^18.0"
+    "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
+    "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0"
   },
   "devDependencies": {
     "@nimbus-ds/box": "workspace:^",
