--- a/packages/react/src/composite/ScrollPane/package.json
+++ b/packages/react/src/composite/ScrollPane/package.json
@@ -42,8 +42,8 @@
   },
   "peerDependencies": {
     "@nimbus-ds/styles": "workspace:^",
-    "react": "^16.8 || ^17.0 || ^18.0",
-    "react-dom": "^16.8 || ^17.0 || ^18.0"
+    "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
+    "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0"
   },
   "dependencies": {
     "@nimbus-ds/box": "workspace:^",
