--- a/packages/react/src/composite/TimePicker/package.json
+++ b/packages/react/src/composite/TimePicker/package.json
@@ -18,7 +18,8 @@
     "@floating-ui/react": "^0.27.5",
     "@nimbus-ds/icon": "workspace:^",
     "@nimbus-ds/icons": "workspace:^",
-    "@nimbus-ds/input": "workspace:^"
+    "@nimbus-ds/input": "workspace:^",
+    "@nimbus-ds/scroll-pane": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
