feat: adds fix-tests new skill and fix tests

--- a/packages/react/src/composite/TimePicker/package.json
+++ b/packages/react/src/composite/TimePicker/package.json
@@ -34,6 +34,8 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@nimbus-ds/webpack": "workspace:^"
+    "@nimbus-ds/webpack": "workspace:^",
+    "@nimbus-ds/box": "workspace:^",
+    "@nimbus-ds/text": "workspace:^"
   }
 }
