--- a/packages/react/src/composite/TimePicker/package.json
+++ b/packages/react/src/composite/TimePicker/package.json
@@ -19,7 +19,8 @@
     "@nimbus-ds/icon": "workspace:^",
     "@nimbus-ds/icons": "workspace:^",
     "@nimbus-ds/input": "workspace:^",
-    "@nimbus-ds/scroll-pane": "workspace:^"
+    "@nimbus-ds/scroll-pane": "workspace:^",
+    "@nimbus-ds/styles": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
