--- a/packages/react/src/composite/TimePicker/package.json
+++ b/packages/react/src/composite/TimePicker/package.json
@@ -35,8 +35,8 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@nimbus-ds/webpack": "workspace:^",
     "@nimbus-ds/box": "workspace:^",
-    "@nimbus-ds/text": "workspace:^"
+    "@nimbus-ds/text": "workspace:^",
+    "@nimbus-ds/webpack": "workspace:^"
   }
 }
