feat: New TimePicker composite component (#414)
* feat: time picker initial implementation

* fix: scrolling

* fix: test

* fix: a11y, scrollpane integration

* fix: item alignment

* fix: styles

* fix: onChange handler

* fix: a11y

* fix: scrollbar

* fix: version

* fix: ts

* fix: cr suggestions

* fix: reuse TimePickerOption

* fix: reuse components

* fix: cleanup min&max time

* fix: refactored code for more readability

* fix: a11y

* fix: reduced dupliacted code in TimePickerColumn

* fix: cleaned up code

* fix: cr suggestions

* fix: version file

* fix: cr suggestions

* feat: adds fix-tests new skill and fix tests

* fix: cr suggestions

* fix: add more tests

* fix: ampm visualization

* fix: build

* fix: remove unnecessary forwardRef

* fix: naming

* feat: changelogs

* fix: versions

* fix: code.mdc

* fix: import type and changelog

* fix: time picker scroll and useTimePicker bug with ampm dropdown

* fix: test

* fix: dropdown padding and story

* fix: gradient

* fix: lint

* fix: version

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -209,6 +209,10 @@
     "./Tabs": {
       "import": "./dist/Tabs/index.js",
       "require": "./dist/Tabs/index.js"
+    },
+    "./TimePicker": {
+      "import": "./dist/TimePicker/index.js",
+      "require": "./dist/TimePicker/index.js"
     }
   }
 }
